--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main>
-  <h1>{{ title }}</h1>
+<main class="flex flex-col justify-center content-center items-center">
+  <h1 class="text-2xl">{{ title }}</h1>
   <app-banner />
 </main>
 
