--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <!-- Here goes the navbar -->
 <!-- <Navbar /> -->
-<div class="container mx-auto">
   <router-outlet>
     <main>
       <h1 class="text-2xl text-center font-bold uppercase">{{ title }}</h1>
-      <p>Some products and more...</p>
-      <div class="grid gap-4 grid-cols-1 grid-flow-row sm:grid-cols-2 md:grid-cols-3">
-        <app-banner *ngFor="let product of products" [product]="product" />
+      <app-banner *ngFor="let banner of banners" [banner]="banner" />
+      <div class="container mx-auto">
+      <h3 class="capitalize mb-5 text-3xl font-bold">products</h3>
+        <div class="grid gap-4 grid-cols-1 grid-flow-row sm:grid-cols-2 md:grid-cols-2">
+          <app-product *ngFor="let product of products" [product]="product" />
+        </div>
       </div>
     </main>
   </router-outlet>
-</div>
